Correção de typo

--- a/scripts/divisordetensao.ipynb
+++ b/scripts/divisordetensao.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Divisor de tensão e Sensores Resistivos - Escola de R1"
+    "# Divisor de tensão e Sensores Resistivos - Escolha de R1"
    ]
   },
   {
