Adicionando exemplo de filtros digitais aplicados a sinais de audio

--- a/scripts/quantizacao_ADC.ipynb
+++ b/scripts/quantizacao_ADC.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "779d80db",
    "metadata": {},
    "outputs": [
@@ -49,8 +49,7 @@
     "senoide_original = amplitude * np.sin(2 * np.pi * frequencia * tempo) + deslocamento\n",
     "\n",
     "# Quantização\n",
-    "nivel_quantizacao = 2 ** bits\n",
-    "intervalo_quantizacao = Vref / (nivel_quantizacao - 1)\n",
+    "intervalo_quantizacao = Vref / (2 ** bits - 1)\n",
     "senoide_quantizada = np.round(senoide_original / intervalo_quantizacao) * intervalo_quantizacao\n",
     "\n",
     "# Erro de Quantização\n",
